# Tavern

./: .gitignore  AGENTS.md  CODE_REVIEW_REPORT.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  VERSIONS.md  docker-compose.yml
.github/workflows/: ci.yml
configs/agents/: editor.yaml  researcher.yaml  writer.yaml
configs/workflows/: content_pipeline.yaml
crates/tavern-adapters/: Cargo.toml
crates/tavern-adapters/src/: lib.rs  mock.rs  pandaria.rs
crates/tavern-comp/: Cargo.toml
crates/tavern-comp/migrations/postgres/: 20260525000001_init.sql
crates/tavern-comp/src/: context.rs  engine.rs  error.rs  event.rs  executor.rs  handle.rs  instance.rs  lib.rs  registry.rs  replay.rs  store.rs  timer.rs  validator.rs  workflow.rs
crates/tavern-comp/src/engine/: tests.rs
crates/tavern-config/: Cargo.toml
crates/tavern-config/src/: lib.rs
crates/tavern-core/: Cargo.toml
crates/tavern-core/src/: config.rs  lib.rs  runtime.rs  tool.rs
crates/tavern-flow/: Cargo.toml
crates/tavern-flow-macros/: Cargo.toml
crates/tavern-flow-macros/src/: lib.rs
crates/tavern-flow/src/: event.rs  lib.rs  registry.rs
crates/tavern-flow/tests/: proc_macro_integration.rs
crates/tavern-hero/: Cargo.toml
crates/tavern-hero/src/: error.rs  hero.rs  lib.rs  loader.rs  registry.rs  validator.rs
crates/tavern-server/: Cargo.toml
crates/tavern-server/src/: auth.rs  handlers.rs  lib.rs  main.rs  ratelimit.rs  router.rs  scheduler.rs  shutdown.rs  sse.rs  state.rs
crates/tavern-server/src/tools/: sidecar.rs  subprocess.rs
crates/tavern-server/tests/: e2e.rs
docs/: ai-agent-builder-analysis.md  comparison-crewai-deep-dive.md  comparison-crewai.md
docs/archive/plans/: plan-v0.3.1-execution-replay.md
docs/archive/specs/: spec-refactor-crewai-alignment-phase1.md  spec-v0.3.0-flow-production.md  spec-v0.3.1-execution-replay.md  spec-v0.3.2-approval-clone-ratelimit.md  spec-v0.3.5-webhook.md  spec-v0.3.7-flow-alignment.md
docs/plans/: 2026-06-03-flow-comp-merge.md  2026-06-09-multilang-tool-runner.md  2026-06-09-tool-runtime.md  plan-comp-v0.1.0.md  plan-comp-v2-event-driven.md  plan-crewai-alignment-completion.md  plan-hero-v0.1.0.md  plan-v0.2.0.md  plan-v0.3.0-flow-production.md  plan-v0.3.1-execution-replay.md  plan-v0.3.2-approval-clone-ratelimit.md  plan-v0.3.4-batch-execution.md
docs/specs/: 2026-06-09-multilang-tool-runner.md  2026-06-09-tool-runtime-design.md  spec-comp-v2-event-driven.md  spec-comp.md  spec-flow-comp-merge.md  spec-flow-proto.md  spec-hero.md  spec-refactor-crewai-alignment-phase1.md  spec-v0.2.0-production-ready.md  spec-v0.3.0-flow-parallel.md  spec-v0.3.0-flow-production.md  spec-v0.3.1-execution-replay.md  spec-v0.3.4-batch-execution.md  spec-v0.3.6-cron-scheduler.md
