[workspace]
members = [
    "crates/tavern-core",
    "crates/tavern-adapters",
    "crates/tavern-hero",
    "crates/tavern-comp",
    "crates/tavern-config",
    "crates/tavern-server",
    "crates/tavern-flow-macros",
    "crates/tavern-flow",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tavern Contributors"]
license = "MIT"
repository = "https://github.com/0xnicholas/Tavern"
