[package]
name = "tavern-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tavern-core = { path = "../tavern-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9"
