[package]
name = "tavern-flow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tavern-flow-macros = { path = "../tavern-flow-macros" }
tavern-core = { path = "../tavern-core" }
tavern-hero = { path = "../tavern-hero" }
tavern-comp = { path = "../tavern-comp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
