[package]
name = "tavern-flow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tavern-flow-macros = { path = "../tavern-flow-macros" }
tavern-comp = { path = "../tavern-comp" }
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
