[package]
name = "tavern-hero"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tavern-core = { path = "../tavern-core" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tavern-adapters = { path = "../tavern-adapters" }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
