[package]
name = "tavern-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tavern-server"
path = "src/main.rs"

[dependencies]
tavern-core = { path = "../tavern-core" }
tavern-hero = { path = "../tavern-hero" }
tavern-comp = { path = "../tavern-comp" }
tavern-adapters = { path = "../tavern-adapters" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"

[dev-dependencies]
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
